--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "calendarjs,demo:http://gtdalp.github.io/calendarjs/demos/calendarjs.html",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gtdalp/pushbutton.git"
+    "url": "git+https://github.com/gtdalp/calendarjs.git"
   },
   "author": "xisa",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gtdalp/pushbutton/issues"
+    "url": "https://github.com/gtdalp/calendarjs/issues"
   },
-  "homepage": "https://github.com/gtdalp/pushbutton#readme"
+  "homepage": "https://github.com/gtdalp/calendarjs#readme",
+  "devDependencies": {
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7"
+  }
 }
